# title-belt-app

./: Dockerfile  README.md  main.py  models.py  pyproject.toml  render.yaml
.github/workflows/: publish.yml
app/: __init__.py  api.py  main.py  models.py
static/css/: main.css
web/: game.html  game_complete.html  games_row.html  home.html  schedule.html  team.html  teams_next_chance.html  teams_ranking.html
