[tool.poetry]
name = "title-belt-app"
version = "0.1.0"
description = "web app for NHL title belt"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
title-belt-nhl = "^0.3.3"
fastapi = {extras = ["all"], version = "^0.115.4"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# # Enable Pyflakes `E` and `F` codes by default.
lint.select = ["F", "E", "W", "I", "N", "YTT", "A", "C4", "RET", "SIM"]
lint.ignore = [
    "A003",
    "E402",
    "E741",
    "F403",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "RET503",
    "RET504",
    "RET505",
    "SIM102",
]
line-length = 90
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]
